@@ -178,7 +178,7 @@ static bool read_delimited_number(units *, unsigned char, units);
 static symbol do_get_long_name(bool, char);
 static bool get_line_arg(units *res, unsigned char si, charinfo **cp);
 static bool read_size(int *);
-static symbol get_delimited_name();
+static symbol read_delimited_name();
 static void init_registers();
 static void trapping_blank_line();
 
@@ -2425,7 +2425,7 @@ void token::next()
       case 'c':
 	goto ESCAPE_c;
       case 'C':
-	nm = get_delimited_name();
+	nm = read_delimited_name();
 	if (nm.is_null())
 	  break;
 	type = TOKEN_SPECIAL_CHAR;
@@ -6138,7 +6138,7 @@ static bool read_size(int *x) // \s
   }
 }
 
-static symbol get_delimited_name()
+static symbol read_delimited_name()
 {
   token start_token;
   start_token.next();
